--- a/client/addjob.html
+++ b/client/addjob.html
@@ -1,4 +1,4 @@
-<template name="addjob">
+<!-- <template name="addjob">
 	<div class="container">
   <div class="row">
     <div class="col-sm-6">
@@ -21,3 +21,4 @@
   </div>
 </div>
 </template>
+ -->
