--- a/client/layout.html
+++ b/client/layout.html
@@ -4,6 +4,7 @@
 
 <template name="Layout">
 {{> navbar}}
+{{> autoformModals}}
 {{> yield}}
 </template>
 
@@ -25,7 +26,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{{pathFor 'home'}}">Home</a></li>
-        <li><a href="{{pathFor 'addjob'}}">Add a Job</a></li>
+        <li>{{#afModal class="btn" collection="Jobs" operation="insert"}}Add a Job{{/afModal}}</li>
         <li><a href="{{pathFor 'jobs'}}">Jobs</a></li>
         {{>loginButtons}}
       </ul>
