--- a/client/layout.html
+++ b/client/layout.html
@@ -1,15 +1,21 @@
 <head>
   <title>Jobbest</title>
+  <script>
+    function myFunction() {
+        alert("You need to be signed in");
+    }
+</script>
 </head>
 
 <template name="Layout">
 {{> navbar}}
 {{> autoformModals}}
 {{> yield}}
+{{>footer}}
 </template>
 
 <template name="navbar">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -19,14 +25,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Jobbest</a>
+      <a class="navbar-brand" href="{{pathFor 'home'}}">Jobbest</a>
     </div>
-
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{{pathFor 'home'}}">Home</a></li>
-        <li>{{#afModal class="btn" collection="Jobs" operation="insert"}}Add a Job{{/afModal}}</li>
+        {{#if currentUser}}
+        <li >{{#afModal class="btn" collection="Jobs" operation="insert"}}Add a Job{{/afModal}}</li>
+        {{/if}}
+
         <li><a href="{{pathFor 'jobs'}}">Jobs</a></li>
         {{>loginButtons}}
       </ul>
