--- a/client/layout.html
+++ b/client/layout.html
@@ -25,7 +25,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{pathFor 'home'}}">Home</a></li>
+        <li><a href="{{pathFor 'home'}}"><i class="fa fa-home cls"></i></a></li>
         {{#if currentUser}}
         <li >{{#afModal class="btn" collection="Jobs" operation="insert"}}Add a Job{{/afModal}}</li>
         {{/if}}
