apply btton fixed

--- a/client/jobs.html
+++ b/client/jobs.html
@@ -19,7 +19,7 @@
 
 				    	
 		    		<div class="panel-footer">
-		    			<a href="#applyModal" class="btn btn-success sign-in-required" data-toggle="modal">Apply</a>
+		    			<a href="#applyModal" class="btn btn-success apply-button sign-in-required" data-toggle="modal">Apply</a>
 		    			<div class="modal fade" id="applyModal">
 						  	<div class="modal-dialog">
 						    	<div class="modal-content">
