--- a/client/home.html
+++ b/client/home.html
@@ -1,4 +1,9 @@
 <template name="home">
 	<div class="jumbotron">
+		<div class="container">
+			<h1 id="jumbowords">Welcome to Jobbest</h1>
+			<h2>The one stop for jobs at MEST</h2>
+			<!-- <h2 id="jumbowords">The one stop for jobs at MEST</h2> -->
+		</div>
     </div> 
 </template>
