--- a/client/layout.html
+++ b/client/layout.html
@@ -30,6 +30,10 @@
         <li >{{#afModal class="btn" collection="Jobs" operation="insert"}}Add a Job{{/afModal}}</li>
         {{/if}}
         <li><a href="{{pathFor 'jobs'}}">Jobs</a></li>
+        {{#if ownJobsCount}}
+            <li><a href="{{pathFor 'dashboard'}}">Dashboard</a></li>
+            <li><a href="{{pathFor 'applications'}}">Received Applications</a></li>
+            {{/if}}
         {{>loginButtons}}
       </ul>
     </div><!-- /.navbar-collapse -->
